# av-atlas

./: .gitattributes  .gitignore  AGENTS.md  AV-Atlas_GOAL.md  AV-Atlas_M2A_TASK.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
configs/: baseline.yaml  m2a.yaml  m2b.yaml  m2b2.yaml
docs/: LICENSE_DECISION.md  PROJECT_STATE.md  PUBLICATION_READINESS.md  PUBLIC_ARTIFACT_POLICY.md  PUBLIC_RELEASE_DECISION.md  architecture.md  data-governance.md  dependency-bom.json  dependency-bom.md  evaluation.md  ocr-annotation-guide.md  publication-manifest.json  security.md
docs/decisions/: ADR-0001-stdlib-cli-and-sidecar-baseline.md  ADR-0002-m2a-rights-subtitles-shots.md  ADR-0004-frozen-ocr-pilot-protocol.md  (+4 more)
schemas/: adapter-results.schema.json  component-evaluation.schema.json  component-gold.schema.json  config.schema.json  dependency-bom.schema.json  entity.schema.json  event-ledger.schema.json  evidence-index.schema.json  fixture-manifest.schema.json  keyframe.schema.json  media-inventory.schema.json  native-input-policy.schema.json  observation-sidecar.schema.json  ocr-benchmark.schema.json  ocr-dependency.schema.json  ocr-evaluation.schema.json  ocr-frame-results.schema.json  ocr-gold.schema.json  ocr-human-annotation.schema.json  ocr-observation.schema.json  ocr-pilot-manifest.schema.json  ocr-runtime.schema.json  ocr-text-tracks.schema.json  pilot-ocr-observation.schema.json  pilot-ocr-output-manifest.schema.json  pilot-security-policy.schema.json  pilot-security-receipt.schema.json  pilot-security-synthetic-report.schema.json  provenance.schema.json  quality-report.schema.json  rights-manifest.schema.json  run-manifest.schema.json  shot.schema.json  stable-input.schema.json  state.schema.json  structured-log.schema.json  subtitle-cue.schema.json  subtitle-tracks.schema.json
tools/: build_publication_manifest.py  make_synthetic_fixture.py
(+78 files in other folders)
